@@ -22,9 +22,11 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IOContext.Context;
@@ -43,15 +45,40 @@ import org.slf4j.LoggerFactory;
  * per path. Most DirectoryFactory implementations will want to extend this
  * class and simply implement {@link DirectoryFactory#create(String, DirContext)}.
  * 
+ * This is an expert class and these API's are subject to change.
+ * 
  */
 public abstract class CachingDirectoryFactory extends DirectoryFactory {
   protected class CacheValue {
-    public Directory directory;
+    final public String path;
+    final public Directory directory;
+    
+    // use the setter!
+    private boolean deleteOnClose = false;
+    
+    public CacheValue(String path, Directory directory) {
+      this.path = path;
+      this.directory = directory;
+      this.closeEntries.add(this);
+    }
     public int refCnt = 1;
-    public boolean closed = false;
-    public String path;
+    // if we are latestForPath, I'm currently using my path
+    // otherwise a new Directory instance is using my path
+    // and I must be manipulated by Directory
+    public boolean latestForPath = false;
+    // has close(Directory) been called on this?
+    public boolean closeDirectoryCalled = false;
     public boolean doneWithDir = false;
-    public boolean deleteOnClose = false;
+    public Set<CacheValue> removeEntries = new HashSet<CacheValue>();
+    public Set<CacheValue> closeEntries = new HashSet<CacheValue>();
+    
+    public void setDeleteOnClose(boolean deleteOnClose) {
+      if (deleteOnClose) {
+        removeEntries.add(this);
+      }
+      this.deleteOnClose = deleteOnClose;
+    }
+    
     @Override
     public String toString() {
       return "CachedDir<<" + directory.toString() + ";refCount=" + refCnt + ";path=" + path + ";done=" + doneWithDir + ">>";
@@ -183,8 +210,9 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
         
         // if it's been closed, it's path is now
         // owned by another Directory instance
-        if (!cacheValue.closed) {
+        if (!cacheValue.latestForPath) {
           byPathCache.remove(cacheValue.path);
+          cacheValue.latestForPath = true;
         }
       }
     }
@@ -201,22 +229,50 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
         }
       }
     }
-    try {
-      log.info("Closing directory: " + cacheValue.path);
-      cacheValue.directory.close();
-    } catch (Throwable t) {
-      SolrException.log(log, "Error closing directory", t);
-    }
+    
+    cacheValue.closeDirectoryCalled = true;
     
     if (cacheValue.deleteOnClose) {
-      try {
-        log.info("Removing directory: " + cacheValue.path);
-        removeDirectory(cacheValue);
-      } catch (Throwable t) {
-        SolrException.log(log, "Error closing directory", t);
+      
+      // see if we are a subpath
+      Collection<CacheValue> values = byPathCache.values();
+      
+      Collection<CacheValue> cacheValues = new ArrayList<CacheValue>();
+      cacheValues.addAll(values);
+      cacheValues.remove(cacheValue);
+      for (CacheValue otherCacheValue : cacheValues) {
+        // if we are a parent path and all our sub children are not already closed,
+        // get a sub path to close us later
+        if (otherCacheValue.path.startsWith(cacheValue.path) && !otherCacheValue.closeDirectoryCalled) {
+          // we let the sub dir remove and close us
+          otherCacheValue.removeEntries.addAll(cacheValue.removeEntries);
+          otherCacheValue.closeEntries.addAll(cacheValue.closeEntries);
+          cacheValue.closeEntries.clear();
+          break;
+        }
       }
     }
     
+    for (CacheValue val : cacheValue.removeEntries) {
+      try {
+        log.info("Removing directory: " + val.path);
+        removeDirectory(val);
+        
+      } catch (Throwable t) {
+        SolrException.log(log, "Error removing directory", t);
+      }
+    }
+    
+    for (CacheValue val : cacheValue.closeEntries) {
+      try {
+        log.info("Closing directory: " + val.path);
+        val.directory.close();
+      } catch (Throwable t) {
+        SolrException.log(log, "Error closing directory", t);
+      }
+      
+    }
+
     if (listeners != null) {
       for (CloseListener listener : listeners) {
         try {
@@ -275,21 +331,13 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
           // we make a quick close attempt,
           // otherwise this should be closed
           // when whatever is using it, releases it
-          
           if (cacheValue.refCnt == 0) {
-            try {
-              // the following will decref, so
-              // first incref
-              cacheValue.refCnt++;
-              close(cacheValue.directory);
-            } catch (IOException e) {
-              SolrException.log(log, "Error closing directory", e);
-            }
+            closeDirectory(cacheValue);
           }
           
           // close the entry, it will be owned by the new dir
           // we count on it being released by directory
-          cacheValue.closed = true;
+          cacheValue.latestForPath = true;
           
         }
       }
@@ -299,9 +347,7 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
         
         directory = rateLimit(directory);
         
-        CacheValue newCacheValue = new CacheValue();
-        newCacheValue.directory = directory;
-        newCacheValue.path = fullPath;
+        CacheValue newCacheValue = new CacheValue(fullPath, directory);
         
         injectLockFactory(directory, fullPath, rawLockType);
         
@@ -384,7 +430,7 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
       if (val == null) {
         throw new IllegalArgumentException("Unknown directory " + path);
       }
-      val.deleteOnClose = true;
+      val.setDeleteOnClose(true);
     }
   }
   
@@ -395,7 +441,7 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
       if (val == null) {
         throw new IllegalArgumentException("Unknown directory " + dir);
       }
-      val.deleteOnClose = true;
+      val.setDeleteOnClose(true);
     }
   }
   
